2009-08-13  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#132855 - Hildon-home process is waking up needlessly while
	device is sleeping

	* .empty:
	* Makefile.am:
	* debian/hildon-home.install: Install an empty file into
	/usr/share/applications/hildon-notification to create the directory
	and remove polling.

	* debian/changelog: Update.

2009-08-07  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 0.3.40
	* configure.ac: 0.3.40

2009-08-06  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#127303 - Very late or almost unsuccessful ringtone/vibra
	playback on loaded system

	* com.nokia.HildonSVNotificationDaemon.service.in:
	* configure.ac:
	* Makefile.am:
	* src/Makefile.am:
	* src/hd-sv-notification-daemon.xml:
	* src/hd-sv-notification-daemon.c:
	* src/hd-sv-notification-daemon.h: Add new mlocked daemon for the
	sound/vibra plugin.

	* debian/hildon-home.install:
	* debian/hildon-home.xsession:
	* debian/rules (DEB_CONFIGURE_EXTRA_FLAGS):

	* src/hd-incoming-events.c: Use new daemon to play sound/vibra.

	* debian/changelog: Update.

2009-07-30  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.39

	* configure.ac: 0.3.39

2009-07-29  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#130489 - moving Hildon-Home start forward

	* debian/rules: use 18 instead of 20 for hildon-home session start
	script priority.

2009-07-28  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#124888 - Notifications are shown on a locked device

	* src/hd-incoming-events.c (_HDIncomingEventsPrivate::device_locked):
	  Add device locked field.
	  (show_preview_window): Do not show preview windows when device is
	  locked.
	  (hd_incoming_events_system_bus_signal_handler,
	  devlock_mode_get_notify, hd_incoming_events_init): Listen to mce for
	  device locking/unlocking.

2009-07-27  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#129876 - App shortcuts on the Desktop not according to
	latest spec
